deployments/app-api.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: app-api
  labels:
    app: app-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-api
  template:
    metadata:
      labels:
        app: app-api
    spec:
      containers:
        - image: us.gcr.io/poplar-178404/app_api:20171114223129_app_api
          imagePullPolicy: Always
          name: app-api
          ports:
            - containerPort: 80
              protocol: TCP
        - image: gcr.io/cloudsql-docker/gce-proxy:1.09
          name: cloudsql-proxy
          command: ["/cloud_sql_proxy", "--dir=/cloudsql",
                    "-instances=poplar-178404:us-east4:poplar=tcp:5432",
                    "-credential_file=/secrets/cloudsql/poplar-f56cca7c55cc.json"]
          volumeMounts:
            - name: cloudsql-instance-credentials
              mountPath: /secrets/cloudsql
              readOnly: true
            - name: ssl-certs
              mountPath: /etc/ssl/certs
            - name: cloudsql
              mountPath: /cloudsql
      volumes:
        - name: cloudsql-instance-credentials
          secret:
            secretName: cloudsql-instance-credentials
        - name: ssl-certs
          hostPath:
            path: /etc/ssl/certs
        - name: cloudsql
          emptyDir:
