deployments/app.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: app
  labels:
    app: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - image: us.gcr.io/poplar-178404/app:20171114135815_app
          imagePullPolicy: Always
          name: app
          ports:
            - containerPort: 80
              protocol: TCP
