deployments/emailer.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: emailer
  labels:
    app: emailer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: emailer
  template:
    metadata:
      labels:
        app: emailer
    spec:
      containers:
        - image: us.gcr.io/poplar-178404/emailer:20171011174956_emailer
          imagePullPolicy: Always
          name: emailer
