deployments/web.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: web
  labels:
    app: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - image: us.gcr.io/poplar-178404/web:latest
          imagePullPolicy: Always
          name: web
          ports:
            - containerPort: 80
              protocol: TCP
          volumeMounts:
            - name: web-persistent-storage
              mountPath: /var/www/html
        - image: gcr.io/cloudsql-docker/gce-proxy:1.09
          name: cloudsql-proxy
          command: ["/cloud_sql_proxy", "--dir=/cloudsql",
                    "-instances=poplar-178404:us-east4:poplar-wp=tcp:3306",
                    "-credential_file=/secrets/cloudsql/poplar-f56cca7c55cc.json"]
          volumeMounts:
            - name: cloudsql-instance-credentials
              mountPath: /secrets/cloudsql
              readOnly: true
            - name: ssl-certs
              mountPath: /etc/ssl/certs
            - name: cloudsql
              mountPath: /cloudsql
      volumes:
        - name: web-persistent-storage
          gcePersistentDisk:
            pdName: wp-disk
            fsType: ext4
        - name: cloudsql-instance-credentials
          secret:
            secretName: cloudsql-instance-credentials
        - name: ssl-certs
          hostPath:
            path: /etc/ssl/certs
        - name: cloudsql
          emptyDir:
