deployments/app-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: app-api
  name: app-api
spec:
  type: LoadBalancer
  loadBalancerIP: "35.196.85.113"
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: app-api
