deployments/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: app
  name: app
spec:
  type: LoadBalancer
  loadBalancerIP: "35.190.179.103"
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: app
