deployments/inside-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: inside-api
  name: inside-api
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: inside-api
