deployments/knowledge-base-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: knowledge-base
  name: knowledge-base
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: knowledge-base
