deployments/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: web
  name: web
spec:
  type: LoadBalancer
  loadBalancerIP: "35.196.59.125"
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: web
